<resources>
    <string name="app_name">Attender</string>
    <string name="facebook_app_id">683953828381840</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="attendees">Attendees</string>
    <string name="calendar">Calendar</string>
    <string name="month">month</string>
    <string name="year2015">2015</string>
    <string name="sunday">Sun</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="eventlist">Event List</string>
    <string name="eventsChatRoom">Events Chat Room</string>
    <string name="attend">Attend</string>
    <string name="date">Date</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="time">Time</string>
    <string name="price">Price</string>
    <string name="attending">Attending</string>
    <string name="host">Host</string>
    <string name="url">Event URL</string>
    <string name="description">Description:</string>
    <string name="attender">ATTENDER</string>
    <string name="subtext">Search. Attend. Meet.</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="loginLabel">Login:</string>
    <string name="googleBTNtxt">Google</string>
    <string name="userLoginBTNtxt">User Login</string>
    <string name="or_LoginPage">OR:</string>
    <string name="guest_mainpage">Connect As Guest</string>
    <string name="createAccount">Create An Account</string>
    <string name="logout">Logout</string>
    <string name="eventCalendar">Event Calendar</string>
    <string name="chat_MainPage">Chat</string>
    <string name="firstName_registration">First Name:</string>
    <string name="lastName_registration">Last Name:</string>
    <string name="confirm_registration">Confirm:</string>
    <string name="openChat_eventPage">Open Chat</string>
    <string name="attendees_eventPage">Attendees</string>
    <string name="confirm">Confirm</string>
























    <string name="title_activity_event_page_activity">EventPageActivity</string>
    <string name="title_activity_event__page_">Event_Page_Activity</string>
    <string name="title_activity_calendar_page">CalendarPageActivity</string>
    <string name="title_activity_search_event">searchEventActivity</string>
    <string name="title_activity_event_list_page">EventListPageActivity</string>
    <string name="title_activity_chat_page">Chat</string>
    <string name="title_activity_main_page">MainPage</string>
    <string name="description_close"><u><b><i>Close Description</i></b></u></string>
    <string name="hello">Hello,</string>
    <string name="search_event">Search Event</string>
    <string-array name="type_array">
        <item>TYPE&#160;&#160;&#160;&#160;&#160;&#160;&#160;▼</item>
        <item>Career&amp;Business</item>
        <item>Community&amp;Environment</item>
        <item>Entertainment</item>
        <item>Fitness</item>
        <item>Health&amp;Wellbeing</item>
        <item>Politics</item>
        <item>New Age&amp;Spirituality</item>
        <item>Socializing</item>
        <item>Tech</item>
        <item>Transport</item>
    </string-array>
    <string-array name="dates_array">
        <item>DATE&#160;&#160;&#160;&#160;&#160;&#160;&#160;▼</item>
        <item>1 day ahead</item>
        <item>1 week ahead</item>
        <item>1 month ahead</item>

    </string-array>
    <string-array name="cities_array">
        <item>CITY&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;▼</item>
        <item>Jerusalem</item>
        <item>Tel Aviv-Yafo</item>
        <item>Haifa</item>
        <item>Herzeliyya</item>
        <item>Ra\'anana</item>
        <item>Rekhovot</item>
        <item>Ramat Gan</item>
        <item>Kefar Sava</item>
        <item>Netanya</item>
        <item>Modi\'in</item>

    </string-array>
    <string name="title_activity_attendees_page">AttendeesPage</string>
    <string name="title_activity_calendar_grid">CalendarGrid</string>
    <string name="title_activity_calendar_grid_cell">CalendarGridCell</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="title_activity_user_login">UserLoginActivity</string>
    <string name="title_activity_dialog_adapter">DialogAdapter</string>


</resources>
