<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.attender.rita.attender.Event_Page_Activity"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <Space
            android:layout_width="20dp"
            android:layout_height="1sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/detailsLine"
            android:padding="5dp"
            android:background="@drawable/event_bg">

            <TextView
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:text="@string/attend"
                android:textStyle="bold|italic"
                android:layout_weight="1"
                android:id="@+id/details_TEX"
                android:textSize="15dp">
            </TextView>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:gravity="center_vertical|right"
                android:layout_weight="2">

                <Switch
                    android:id="@+id/attend_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="fill_parent"
            android:layout_height="1sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:id="@+id/dateLine"
            android:padding="5dp"
            android:background="@drawable/event_bg">

            <TextView
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:text="@string/date"
                android:textStyle="bold|italic"
                android:layout_weight="3"
                android:textSize="15dp">
            </TextView>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:gravity="right"
                android:layout_weight="1">

                <TextView
                    android:layout_height="0dp"
                    android:layout_width="fill_parent"
                    android:id="@+id/date_lbl"
                    android:layout_weight="1"
                    android:gravity="center_vertical|right"
                    android:textSize="15dp">
                </TextView>
            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="fill_parent"
            android:layout_height="1sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:id="@+id/cityLine"
            android:padding="5dp"
            android:background="@drawable/event_bg">

            <TextView
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:text="@string/city"
                android:textStyle="bold|italic"
                android:layout_weight="3"
                android:textSize="15dp">
            </TextView>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:gravity="right"
                android:layout_weight="1">

                <TextView
                    android:layout_height="0dp"
                    android:layout_width="fill_parent"
                    android:id="@+id/cityName_lbl"
                    android:layout_weight="1"
                    android:gravity="center_vertical|right"
                    android:textSize="15dp">
                </TextView>
            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="fill_parent"
            android:layout_height="1sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:id="@+id/addressLine"
            android:padding="5dp"
            android:background="@drawable/event_bg">

            <TextView
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:text="@string/address"
                android:textStyle="bold|italic"
                android:layout_weight="3"
                android:textSize="15dp">
            </TextView>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:gravity="right"
                android:layout_weight="1">

                <TextView
                    android:layout_height="0dp"
                    android:layout_width="fill_parent"
                    android:id="@+id/address_lbl"
                    android:layout_weight="1"
                    android:gravity="center_vertical|right"
                    android:textSize="15dp">
                </TextView>
            </LinearLayout>

        </LinearLayout>

        <Space
            android:layout_width="fill_parent"
            android:layout_height="1sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:id="@+id/timeLine"
            android:padding="5dp"
            android:background="@drawable/event_bg">

            <TextView
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:text="@string/time"
                android:textStyle="bold|italic"
                android:layout_weight="3"
                android:textSize="15dp">
            </TextView>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:gravity="right"
                android:layout_weight="1">

                <TextView
                    android:layout_height="0dp"
                    android:layout_width="fill_parent"
                    android:id="@+id/time_lbl"
                    android:layout_weight="1"
                    android:gravity="center_vertical|right"
                    android:textSize="15dp">
                </TextView>
            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="fill_parent"
            android:layout_height="1sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:id="@+id/priceLine"
            android:padding="5dp"
            android:background="@drawable/event_bg">

            <TextView
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:text="@string/price"
                android:textStyle="bold|italic"
                android:layout_weight="3"
                android:textSize="15dp">
            </TextView>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:gravity="right"
                android:layout_weight="1">

                <TextView
                    android:layout_height="fill_parent"
                    android:layout_width="fill_parent"
                    android:id="@+id/price_lbl"
                    android:layout_weight="1"
                    android:gravity="center_vertical|right"
                    android:textSize="15dp">
                </TextView>
            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="fill_parent"
            android:layout_height="1sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:id="@+id/attendingLine"
            android:padding="5dp"
            android:background="@drawable/event_bg">

            <TextView
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:text="@string/attending"
                android:textStyle="bold|italic"
                android:layout_weight="3"
                android:textSize="15dp">
            </TextView>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:gravity="right"
                android:layout_weight="1">

                <TextView
                    android:layout_height="0dp"
                    android:layout_width="fill_parent"
                    android:id="@+id/attending_lbl"
                    android:layout_weight="1"
                    android:gravity="center_vertical|right"
                    android:textSize="15dp">
                </TextView>
            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="fill_parent"
            android:layout_height="1sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:id="@+id/hostLine"
            android:padding="5dp"
            android:background="@drawable/event_bg">

            <TextView
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:text="@string/host"
                android:textStyle="bold|italic"
                android:layout_weight="3"
                android:textSize="15dp">
            </TextView>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:gravity="right"
                android:layout_weight="1">

                <TextView
                    android:layout_height="fill_parent"
                    android:layout_width="fill_parent"
                    android:id="@+id/host_lbl"
                    android:layout_weight="1"
                    android:gravity="center_vertical|right"
                    android:textSize="15dp">
                </TextView>
            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="fill_parent"
            android:layout_height="1sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:id="@+id/eventUrlLine"
            android:padding="5dp"
            android:background="@drawable/event_bg">

            <TextView
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:text="@string/url"
                android:textStyle="bold|italic"
                android:layout_weight="3"
                android:textSize="15dp">
            </TextView>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:gravity="right"
                android:layout_weight="1">

                <TextView
                    android:layout_height="0dp"
                    android:layout_width="fill_parent"
                    android:id="@+id/url_lbl"
                    android:layout_weight="1"
                    android:gravity="center_vertical|right"
                    android:textSize="15dp">
                </TextView>
            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="fill_parent"
            android:layout_height="1sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:id="@+id/descriptionLine"
            android:padding="5dp"
            android:layout_weight="1"
            android:background="@drawable/event_bg">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:text="@string/description"
                android:textStyle="bold|italic"
                android:textSize="15dp"
                android:id="@+id/desc_txt"
                android:onClick="descCloseClick">
            </TextView>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="left">

                <TextView
                    android:layout_height="0dp"
                    android:layout_width="fill_parent"
                    android:scrollbars = "none"
                    android:id="@+id/description_lbl"
                    android:layout_weight="1"
                    android:onClick="onInfoClick"
                    android:textSize="15dp">
                </TextView>
            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="fill_parent"
            android:layout_height="1sp" />

    </LinearLayout>


</LinearLayout>
