
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.attender.RegistrationActivity"
    android:background="#ff292929"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">




    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#ff292929">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:background="#ffffffff">

            <LinearLayout
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:orientation="horizontal"
                android:id="@+id/nameLine"
                android:paddingTop="30dp"
                android:paddingBottom="25dp"
                android:paddingEnd="20dp"
                android:paddingStart="20dp">

                <TextView
                    android:layout_height="fill_parent"
                    android:layout_width="fill_parent"
                    android:text="@string/firstName_registration"
                    android:textStyle="bold|italic"
                    android:layout_weight="1"
                    android:textSize="25sp"
                    android:textColor="#ff0d00a1"
                    android:id="@+id/name_lbl">
                </TextView>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"
                    android:gravity="center_vertical|right"
                    android:layout_weight="1">

                    <EditText
                        android:layout_height="0dp"
                        android:layout_width="fill_parent"
                        android:id="@+id/name_text"
                        android:gravity="center_vertical|left"
                        android:inputType="textCapWords"
                        android:layout_weight="5"
                        android:textSize="15sp"
                        android:singleLine="true"
                        android:textColor="#fc000000">
                    </EditText>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:id="@+id/LastNameLine"
                android:paddingTop="25dp"
                android:paddingBottom="25dp"
                android:paddingEnd="20dp"
                android:paddingStart="20dp">

                <TextView
                    android:layout_height="fill_parent"
                    android:layout_width="fill_parent"
                    android:text="@string/lastName_registration"
                    android:textStyle="bold|italic"
                    android:layout_weight="1"
                    android:textSize="25sp"
                    android:textColor="#ff0d00a1"
                    android:id="@+id/lName_lbl">
                </TextView>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"
                    android:gravity="right"
                    android:layout_weight="1">

                    <EditText
                        android:layout_height="0dp"
                        android:layout_width="fill_parent"
                        android:id="@+id/LastName_text"
                        android:layout_weight="5"
                        android:gravity="center_vertical|left"
                        android:inputType="text|textCapSentences"
                        android:textSize="15sp"
                        android:singleLine="true"
                        android:textColor="#fc000000">
                    </EditText>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:id="@+id/EmailLine"
                android:paddingTop="25dp"
                android:paddingBottom="25dp"
                android:paddingEnd="20dp"
                android:paddingStart="20dp">

                <TextView
                    android:layout_height="fill_parent"
                    android:layout_width="fill_parent"
                    android:text="@string/email"
                    android:textStyle="bold|italic"
                    android:layout_weight="1"
                    android:textSize="25sp"
                    android:textColor="#ff0d00a1"
                    android:id="@+id/email_lbl">
                </TextView>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"
                    android:gravity="right"
                    android:layout_weight="1">


                    <EditText
                        android:layout_height="0dp"
                        android:layout_width="fill_parent"
                        android:inputType="textEmailAddress"
                        android:ems="10"
                        android:id="@+id/email_txt"
                        android:layout_weight="3"
                        android:gravity="center_vertical|left"
                        android:textSize="15sp"
                        android:singleLine="true"
                        android:textColor="#fc000000">
                    </EditText>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:id="@+id/passwordLine"
                android:paddingTop="25dp"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:paddingBottom="25dp">

                <TextView
                    android:layout_height="fill_parent"
                    android:layout_width="fill_parent"
                    android:text="@string/password"
                    android:textStyle="bold|italic"
                    android:layout_weight="1"
                    android:textSize="25sp"
                    android:textColor="#ff0d00a1"
                    android:id="@+id/password_lbl">
                </TextView>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"
                    android:gravity="right"
                    android:layout_weight="1">

                    <EditText
                        android:layout_height="0dp"
                        android:layout_width="fill_parent"
                        android:inputType="textPassword"
                        android:ems="10"
                        android:id="@+id/password_txt"
                        android:layout_weight="3"
                        android:gravity="center_vertical|left"
                        android:textSize="15sp"
                        android:singleLine="true"
                        android:textColor="#fc000000">
                    </EditText>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:orientation="horizontal"
                android:id="@+id/confirmPasswordLine"
                android:paddingTop="30dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="30dp">

                <TextView
                    android:layout_height="fill_parent"
                    android:layout_width="fill_parent"
                    android:text="@string/confirm_registration"
                    android:textStyle="bold|italic"
                    android:layout_weight="1"
                    android:textSize="25sp"
                    android:textColor="#ff0d00a1"
                    android:id="@+id/confPass_lbl">
                </TextView>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"
                    android:gravity="right"
                    android:layout_weight="1">

                    <EditText
                        android:layout_height="0dp"
                        android:layout_width="fill_parent"
                        android:inputType="textPassword"
                        android:ems="10"
                        android:id="@+id/confPass_txt"
                        android:layout_weight="3"
                        android:gravity="left|center_vertical|bottom"
                        android:textSize="15sp"
                        android:singleLine="true"
                        android:textColor="#fc000000">
                    </EditText>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
